fix dark mode h4 link

--- a/index.css
+++ b/index.css
@@ -183,7 +183,9 @@ footer {
   }
 
   a,
-  a:hover {
+  a:hover,
+  h4 a,
+  h4 a:hover {
     color: #8DB2E5;
   }
 
